Hoàn thiện môi trường, kiến trúc tổng, test mô phỏng 1 ngã tư, xe car, kèm đèn cơ bản